# codex_remote_cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
codex_remote_cli/: __main__.py
tests/: test_cli.py  test_relay_integration.py
